--- a/rowing_club_app/package.json
+++ b/rowing_club_app/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/checkbox": "^0.5.17",
     "@react-navigation/bottom-tabs": "^6.5.12",
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.18",
@@ -16,7 +17,8 @@
     "expo-status-bar": "~1.11.1",
     "firebase": "^10.8.0",
     "react": "18.2.0",
-    "react-native": "^0.73.4"
+    "react-native": "^0.73.4",
+    "react-native-checkbox": "^2.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
