--- a/rowing_club_app/package.json
+++ b/rowing_club_app/package.json
@@ -18,7 +18,9 @@
     "firebase": "^10.8.0",
     "react": "18.2.0",
     "react-native": "^0.73.4",
-    "react-native-checkbox": "^2.0.0"
+    "react-native-checkbox": "^2.0.0",
+    "expo-image-picker": "~14.7.1",
+    "expo-file-system": "~16.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
