--- a/rowing_club_app/package.json
+++ b/rowing_club_app/package.json
@@ -14,13 +14,13 @@
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.18",
     "expo": "^50.0.6",
+    "expo-file-system": "~16.0.6",
+    "expo-image-picker": "~14.7.1",
     "expo-status-bar": "~1.11.1",
     "firebase": "^10.8.0",
     "react": "18.2.0",
     "react-native": "^0.73.4",
-    "react-native-checkbox": "^2.0.0",
-    "expo-image-picker": "~14.7.1",
-    "expo-file-system": "~16.0.6"
+    "react-native-checkbox": "^2.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
