--- a/rowing_club_app/package.json
+++ b/rowing_club_app/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/bottom-tabs": "^6.5.12",
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.18",
+    "@react-navigation/stack": "^6.3.21",
     "expo": "^50.0.6",
     "expo-file-system": "~16.0.6",
     "expo-image-picker": "~14.7.1",
@@ -20,7 +21,9 @@
     "firebase": "^10.8.0",
     "react": "18.2.0",
     "react-native": "^0.73.4",
-    "react-native-checkbox": "^2.0.0"
+    "react-native-checkbox": "^2.0.0",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
