--- a/rowing_club_app/package.json
+++ b/rowing_club_app/package.json
@@ -22,6 +22,7 @@
     "react": "18.2.0",
     "react-native": "^0.73.4",
     "react-native-checkbox": "^2.0.0",
+    "react-native-dropdown-select-list": "^2.0.5",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0"
   },
