--- a/rowing_club_app/package.json
+++ b/rowing_club_app/package.json
@@ -22,6 +22,7 @@
     "firebase": "^10.8.0",
     "react": "18.2.0",
     "react-native": "^0.73.4",
+    "react-native-camera": "^4.2.1",
     "react-native-checkbox": "^2.0.0",
     "react-native-dropdown-select-list": "^2.0.5",
     "react-native-safe-area-context": "4.8.2",
