--- a/rowing_club_app/package.json
+++ b/rowing_club_app/package.json
@@ -15,7 +15,7 @@
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.18",
     "@react-navigation/stack": "^6.3.21",
-    "expo": "^50.0.6",
+    "expo": "~50.0.7",
     "expo-file-system": "~16.0.6",
     "expo-image-picker": "~14.7.1",
     "expo-status-bar": "~1.11.1",
