--- a/rowing_club_app/package.json
+++ b/rowing_club_app/package.json
@@ -25,6 +25,7 @@
     "react-native-camera": "^4.2.1",
     "react-native-checkbox": "^2.0.0",
     "react-native-dropdown-select-list": "^2.0.5",
+    "react-native-modal": "^13.0.1",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0"
   },
