--- a/rowing_club_app/package.json
+++ b/rowing_club_app/package.json
@@ -29,7 +29,8 @@
     "react-native-picker-select": "^9.0.1",
     "react-native-root-toast": "^3.5.1",
     "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0"
+    "react-native-screens": "~3.29.0",
+    "react-native-vector-icons": "^10.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
