--- a/rowing_club_app/package.json
+++ b/rowing_club_app/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/webpack-config": "^19.0.0",
     "@react-native-community/checkbox": "^0.5.17",
     "@react-native-community/datetimepicker": "7.6.1",
     "@react-native-picker/picker": "^2.6.1",
@@ -16,13 +17,14 @@
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.18",
     "@react-navigation/stack": "^6.3.21",
-    "expo": "^50.0.11",
+    "expo": "^50.0.17",
     "expo-file-system": "~16.0.6",
     "expo-image-picker": "~14.7.1",
     "expo-status-bar": "~1.11.1",
     "firebase": "^10.8.0",
     "react": "18.2.0",
-    "react-native": "^0.73.4",
+    "react-dom": "18.2.0",
+    "react-native": "0.73.6",
     "react-native-camera": "^4.2.1",
     "react-native-checkbox": "^2.0.0",
     "react-native-date-picker": "^5.0.0",
@@ -32,7 +34,8 @@
     "react-native-picker-select": "^9.0.1",
     "react-native-root-toast": "^3.5.1",
     "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0"
+    "react-native-screens": "~3.29.0",
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
