--- a/rowing_club_app/package.json
+++ b/rowing_club_app/package.json
@@ -16,13 +16,13 @@
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.18",
     "@react-navigation/stack": "^6.3.21",
-    "expo": "^50.0.11",
+    "expo": "~50.0.17",
     "expo-file-system": "~16.0.6",
     "expo-image-picker": "~14.7.1",
     "expo-status-bar": "~1.11.1",
     "firebase": "^10.8.0",
     "react": "18.2.0",
-    "react-native": "^0.73.4",
+    "react-native": "0.73.6",
     "react-native-camera": "^4.2.1",
     "react-native-checkbox": "^2.0.0",
     "react-native-date-picker": "^5.0.0",
