--- a/rowing_club_app/package.json
+++ b/rowing_club_app/package.json
@@ -9,22 +9,24 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-native-community/checkbox": "^0.5.17",
     "@react-native-picker/picker": "^2.6.1",
     "@react-navigation/bottom-tabs": "^6.5.12",
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.18",
     "@react-navigation/stack": "^6.3.21",
-    "expo": "^50.0.11",
+    "expo": "~50.0.14",
     "expo-file-system": "~16.0.6",
     "expo-image-picker": "~14.7.1",
     "expo-status-bar": "~1.11.1",
     "firebase": "^10.8.0",
     "react": "18.2.0",
-    "react-native": "^0.73.4",
+    "react-native": "0.73.6",
     "react-native-camera": "^4.2.1",
     "react-native-checkbox": "^2.0.0",
     "react-native-dropdown-select-list": "^2.0.5",
+    "react-native-gesture-handler": "~2.14.0",
     "react-native-modal": "^13.0.1",
     "react-native-picker-select": "^9.0.1",
     "react-native-root-toast": "^3.5.1",
