Fix dependency for updated expo SDK

--- a/rowing_club_app/app.json
+++ b/rowing_club_app/app.json
@@ -7,7 +7,8 @@
         {
           "photosPermission": "The app accesses your photos to let you share them with your friends."
         }
-      ]
+      ],
+      "expo-build-properties"
     ],
     "slug": "rowing_club_app",
     "version": "1.0.0",
