--- a/rowing_club_app/package.json
+++ b/rowing_club_app/package.json
@@ -9,7 +9,6 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/webpack-config": "^19.0.0",
     "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-native-community/checkbox": "^0.5.17",
     "@react-native-community/datetimepicker": "7.6.1",
@@ -18,7 +17,7 @@
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.18",
     "@react-navigation/stack": "^6.3.21",
-    "expo": "^50.0.17",
+    "expo": "^51.0.2",
     "expo-file-system": "~16.0.6",
     "expo-image-picker": "~14.7.1",
     "expo-status-bar": "~1.11.1",
@@ -30,8 +29,8 @@
     "react-native-checkbox": "^2.0.0",
     "react-native-date-picker": "^5.0.2",
     "react-native-dropdown-select-list": "^2.0.5",
-    "react-native-masked-text": "^1.13.0",
     "react-native-gesture-handler": "~2.14.0",
+    "react-native-masked-text": "^1.13.0",
     "react-native-modal": "^13.0.1",
     "react-native-modern-datepicker": "^1.0.0-beta.91",
     "react-native-picker-select": "^9.0.1",
@@ -39,7 +38,9 @@
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-vector-icons": "^10.0.3",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "react-native-reanimated": "~3.10.1",
+    "expo-build-properties": "~0.12.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
