--- a/rowing_club_app/package.json
+++ b/rowing_club_app/package.json
@@ -11,32 +11,32 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-native-community/checkbox": "^0.5.17",
-    "@react-native-community/datetimepicker": "7.6.1",
+    "@react-native-community/datetimepicker": "7.7.0",
     "@react-native-picker/picker": "^2.6.1",
     "@react-navigation/bottom-tabs": "^6.5.12",
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.18",
     "@react-navigation/stack": "^6.3.21",
-    "expo": "^51.0.2",
-    "expo-file-system": "~16.0.6",
-    "expo-image-picker": "~14.7.1",
-    "expo-status-bar": "~1.11.1",
+    "expo": "~51.0.4",
+    "expo-file-system": "~17.0.1",
+    "expo-image-picker": "~15.0.4",
+    "expo-status-bar": "~1.12.1",
     "firebase": "^10.8.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.73.6",
+    "react-native": "0.74.1",
     "react-native-camera": "^4.2.1",
     "react-native-checkbox": "^2.0.0",
     "react-native-date-picker": "^5.0.2",
     "react-native-dropdown-select-list": "^2.0.5",
-    "react-native-gesture-handler": "~2.14.0",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-masked-text": "^1.13.0",
     "react-native-modal": "^13.0.1",
     "react-native-modern-datepicker": "^1.0.0-beta.91",
     "react-native-picker-select": "^9.0.1",
     "react-native-root-toast": "^3.5.1",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
     "react-native-vector-icons": "^10.0.3",
     "react-native-web": "~0.19.6",
     "react-native-reanimated": "~3.10.1",
