--- a/rowing_club_app/package.json
+++ b/rowing_club_app/package.json
@@ -6,7 +6,9 @@
     "start": "expo start --dev-client",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.21.0",
@@ -18,6 +20,7 @@
     "@react-navigation/native-stack": "^6.9.18",
     "@react-navigation/stack": "^6.3.21",
     "expo": "~51.0.4",
+    "expo-build-properties": "~0.12.1",
     "expo-file-system": "~17.0.1",
     "expo-image-picker": "~15.0.4",
     "expo-status-bar": "~1.12.1",
@@ -34,16 +37,19 @@
     "react-native-modal": "^13.0.1",
     "react-native-modern-datepicker": "^1.0.0-beta.91",
     "react-native-picker-select": "^9.0.1",
+    "react-native-reanimated": "~3.10.1",
     "react-native-root-toast": "^3.5.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-vector-icons": "^10.0.3",
-    "react-native-web": "~0.19.6",
-    "react-native-reanimated": "~3.10.1",
-    "expo-build-properties": "~0.12.1"
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@testing-library/jest-native": "^5.4.3",
+    "@testing-library/react-native": "^12.9.0",
+    "jest": "^30.1.3",
+    "react-test-renderer": "^18.2.0"
   },
   "private": true
 }
